Clean up of file names to enable install

--- a/web/themes/opendoor/config/optional/block.block.opendoor_content.yml
+++ b/web/themes/opendoor/config/optional/block.block.opendoor_content.yml
@@ -4,9 +4,9 @@ dependencies:
   module:
     - system
   theme:
-    - olivero
-id: olivero_content
-theme: olivero
+    - opendoor
+id: opendoor_content
+theme: opendoor
 region: content
 weight: 0
 provider: null
