--- a/web/themes/opendoor/config/optional/block.block.opendoor_page_title.yml
+++ b/web/themes/opendoor/config/optional/block.block.opendoor_page_title.yml
@@ -2,9 +2,9 @@ langcode: en
 status: true
 dependencies:
   theme:
-    - olivero
-id: olivero_page_title
-theme: olivero
+    - opendoor
+id: opendoor_page_title
+theme: opendoor
 region: content_above
 weight: -5
 provider: null
