--- a/web/themes/opendoor/config/optional/block.block.opendoor_primary_admin_actions.yml
+++ b/web/themes/opendoor/config/optional/block.block.opendoor_primary_admin_actions.yml
@@ -2,9 +2,9 @@ langcode: en
 status: true
 dependencies:
   theme:
-    - olivero
-id: olivero_primary_admin_actions
-theme: olivero
+    - opendoor
+id: opendoor_primary_admin_actions
+theme: opendoor
 region: highlighted
 weight: -5
 provider: null
