--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,15 @@
 /web/sites/
 # Ignore PHPStorm Project files
 .idea
+/vendor/
+
+# Ignore configuration files that may contain sensitive information.
+/web/sites/*/settings*.php
+/web/sites/*/services*.yml
+
+# Ignore paths that contain user-generated content.
+/web/sites/*/files
+/web/sites/*/private
+
+# Ignore multi-site test environment.
+/web/sites/simpletest
